--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "firebase": "^12.1.0",
+    "firebase-admin": "^13.4.0",
     "lucide-react": "^0.526.0",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
